INCLUDE(../../cmake/macros.cmake)

#FILE(GLOB ROBOT_LIST *)
#FOREACH(ROBOT ${ROBOT_LIST})
#	IF(IS_DIRECTORY ${ROBOT} AND NOT ${ROBOT} MATCHES "/CMake[^/]*")
#		ADD_SUBDIRECTORY(${ROBOT})
#	ENDIF(IS_DIRECTORY ${ROBOT} AND NOT ${ROBOT} MATCHES "/CMake[^/]*")
#ENDFOREACH(ROBOT ${ROBOT_LIST})

#ADD_SUBDIRECTORY(bt)
ADD_SUBDIRECTORY(hymie)
ADD_SUBDIRECTORY(human)
#ADD_SUBDIRECTORY(K1999)
ADD_SUBDIRECTORY(kilo2008)
ADD_SUBDIRECTORY(simplix)
ADD_SUBDIRECTORY(usr_36GP)
ADD_SUBDIRECTORY(usr_ls1)
ADD_SUBDIRECTORY(usr_sc)
ADD_SUBDIRECTORY(usr_trb1)
ADD_SUBDIRECTORY(networkhuman)

