INCLUDE(../../cmake/macros.cmake)
PROJECT(speed-dreams)

SET(SD_SOURCES main.cpp speed-dreams.rc ../../data/data/icons/icon.ico)

ADD_INTERFACE_INCLUDEDIR()
ADD_SDLIB_INCLUDEDIR(legacymenu raceengine tgf tgfclient portability)
ADD_PLIB_INCLUDEDIR()

#disable developer warning
if (COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

ADD_EXECUTABLE(speed-dreams-2 ${SD_SOURCES})

ADD_SDLIB_LIBRARY(speed-dreams-2 legacymenu raceengine tgf)

SD_INSTALL_FILES(BIN TARGETS speed-dreams-2)

# Install OpenAL and SDL DLLs close to Speed Dreams executable
FIND_PACKAGE(OpenAL)
GET_FILENAME_COMPONENT(OPENALLIBPATH ${OPENAL_LIBRARY} PATH)
GET_FILENAME_COMPONENT(OPENALLIBNAME ${OPENAL_LIBRARY} NAME_WE)
SET(OPENALDLLPATHNAME ${OPENALLIBPATH}/../bin/${CMAKE_SHARED_LIBRARY_PREFIX}${OPENALLIBNAME}${CMAKE_SHARED_LIBRARY_SUFFIX})

FIND_PACKAGE(SDL)
GET_FILENAME_COMPONENT(SDLLIBPATH ${SDL_LIBRARY} PATH)
GET_FILENAME_COMPONENT(SDLLIBNAME ${SDL_LIBRARY} NAME_WE)
SET(SDLDLLPATHNAME ${SDLLIBPATH}/../bin/${CMAKE_SHARED_LIBRARY_PREFIX}${SDLLIBNAME}${CMAKE_SHARED_LIBRARY_SUFFIX})

SD_INSTALL_FILES(BIN FILES ${OPENALDLLPATHNAME} ${SDLDLLPATHNAME})
